instruments/AIOUSB/DLL/CoreExports.pas


  case Dev[DeviceIndex].USBDriverType of
    dtCyUSB2, dtCyUSB3: begin
      Buf := StringOfChar(AnsiChar(#0), SizeOf(pCyTransfer^)) + Buf;
      pCyTransfer := Pointer(PAnsiChar(Buf));
      with pCyTransfer^ do begin
        SetupPacket.bRequestType := $40;
        SetupPacket.bRequest := Request;
        SetupPacket.Value := Value;
        SetupPacket.Index := Index;
        SetupPacket.Len := DataSize;
        SetupPacket.ulTimeOut := CyBaseTimeout;
        ucEndpointAddress := 0; //EP0.
        BufferOffset := SizeOf(pCyTransfer^);
        BufferLength := SetupPacket.Len;
      end;
      BytesReturned := 0;
      if DeviceIoControl(GetThreadHandleForDevice(DeviceIndex), IOCTL_ADAPT_SEND_EP0_CONTROL_TRANSFER, PAnsiChar(Buf), Length(Buf), PAnsiChar(Buf), Length(Buf), BytesReturned, nil) then
        Result := ERROR_SUCCESS
      else
        Result := GetMappedFailure(DeviceIndex)
      ;
    end;
    dtWinUSB: begin
      SetupData.RequestType := $40;
      SetupData.Request := Request;
      SetupData.Value := Value;
      SetupData.Index := Index;
      SetupData.DataLength := DataSize;
      if WinUSB_ControlTransfer(GetThreadHandleForDevice(DeviceIndex), SetupData, PByte(PAnsiChar(Buf)), DataSize, DataSize, nil) then
        Result := ERROR_SUCCESS
      else
        Result := GetMappedFailure(DeviceIndex)
      ;
    end;
    else begin
      Result := ERROR_NOT_SUPPORTED;
    end;
  end;
end;

function GenericVendorRead(DeviceIndex: LongWord; Request: Byte; Value, Index: Word; var DataSize: LongWord; pData: Pointer): LongWord; cdecl;
begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    Result := _GenericVendorRead(DeviceIndex, Request, Value, Index, DataSize, pData);
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function GenericVendorWrite(DeviceIndex: LongWord; Request: Byte; Value, Index: Word; DataSize: LongWord; pData: Pointer): LongWord; cdecl;
begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    Result := _GenericVendorWrite(DeviceIndex, Request, Value, Index, DataSize, pData);
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function _Cy_GenericRead(DeviceIndex: LongWord; RequestType, Request: Byte; Value, Index: Word; var DataSize: LongWord; pData: Pointer): LongWord; register;
var
  Buf: AnsiString;
  BytesReturned: LongWord;
  pCyTransfer: TPCyControlTransfer;

begin
  try
    SetString(Buf, PAnsiChar(pData), DataSize);
  except
    Result := ERROR_NOACCESS;
    Exit;
  end;

  Buf := StringOfChar(AnsiChar(#0), SizeOf(pCyTransfer^)) + Buf;
  pCyTransfer := Pointer(PAnsiChar(Buf));
  with pCyTransfer^ do begin
    SetupPacket.bRequestType := RequestType or $80;
    SetupPacket.bRequest := Request;
    SetupPacket.Value := Value;
    SetupPacket.Index := Index;
    SetupPacket.Len := DataSize;
    SetupPacket.ulTimeOut := CyBaseTimeout;
    ucEndpointAddress := 0; //EP0.
    IsoPacketLength := 0;
    BufferOffset := SizeOf(pCyTransfer^);
    BufferLength := SetupPacket.Len;
  end;
  BytesReturned := 0;
  if DeviceIoControl(GetThreadHandleForDevice(DeviceIndex), IOCTL_ADAPT_SEND_EP0_CONTROL_TRANSFER, PAnsiChar(Buf), Length(Buf), PAnsiChar(Buf), Length(Buf), BytesReturned, nil) then begin
    Result := ERROR_SUCCESS;
    BytesReturned := Min(BytesReturned, Length(Buf));
    if BytesReturned <= SizeOf(pCyTransfer^) then
      DataSize := 0
    else
      DataSize := BytesReturned - SizeOf(pCyTransfer^)
    ;
    try
      Move(Buf[1 + SizeOf(pCyTransfer^)], pData^, DataSize);
    except
      Result := ERROR_NOACCESS;
    end;
  end
  else begin
    Result := GetLastError;
    if Result = ERROR_SUCCESS then Result := ERROR_GEN_FAILURE;
    Buf := '';
  end;
end;

function _hCy_GenericVendorWriteStr(hDevice: THandle; Request: Byte; Value, Index: Word; Data: AnsiString): LongWord; cdecl;
var
  DataSize: LongWord;
  BytesReturned: LongWord;
  pCyTransfer: TPCyControlTransfer;

begin
  DataSize := Length(Data);
  Data := StringOfChar(AnsiChar(#0), SizeOf(pCyTransfer^)) + Data;
  pCyTransfer := Pointer(PAnsiChar(Data));
  with pCyTransfer^ do begin
    SetupPacket.bRequestType := $40;
    SetupPacket.bRequest := Request;
    SetupPacket.Value := Value;
    SetupPacket.Index := Index;
    SetupPacket.Len := DataSize;
    SetupPacket.ulTimeOut := CyBaseTimeout;
    ucEndpointAddress := 0; //EP0.
    BufferOffset := SizeOf(pCyTransfer^);
    BufferLength := SetupPacket.Len;
  end;
  BytesReturned := 0;
  if DeviceIoControl(hDevice, IOCTL_ADAPT_SEND_EP0_CONTROL_TRANSFER, PAnsiChar(Data), Length(Data), PAnsiChar(Data), Length(Data), BytesReturned, nil) then
    Result := ERROR_SUCCESS
  else begin
    Result := GetLastError;
    if Result = ERROR_SUCCESS then Result := ERROR_GEN_FAILURE;
  end;
end;

function _GenericBulk(DeviceIndex: LongWord; PipeID: LongWord; pData: Pointer; DataSize: LongWord; var BytesTransferred: LongWord): LongWord;
var
  CT: TCyBulkTransfer;
  WinUsb_TransferPipe: TWinUsb_TransferPipe;

begin
  case Dev[DeviceIndex].USBDriverType of
    dtCyUSB2, dtCyUSB3: begin
      FillChar(CT, SizeOf(CT), 0);
      CT.SetupPacket.ulTimeOut := CyBaseTimeout;
      CT.ucEndpointAddress := PipeID;
      if Dev[DeviceIndex].USBDriverType = dtCyUSB3 then begin
        CT.BufferOffset := 0;
        CT.BufferLength := DataSize;
      end;
      if DeviceIoControl(GetThreadHandleForDevice(DeviceIndex), IOCTL_ADAPT_SEND_NON_EP0_DIRECT, @CT, SizeOf(CT), pData, DataSize, BytesTransferred, nil) then begin
        Result := ERROR_SUCCESS;
        if BytesTransferred > DataSize then BytesTransferred := DataSize;
      end
      else
        Result := GetMappedFailure(DeviceIndex)
      ;
    end;
    dtWinUSB: begin
      if (PipeID and $80) <> 0 then
        WinUsb_TransferPipe := WinUsb_ReadPipe
      else
        WinUsb_TransferPipe := WinUsb_WritePipe
      ;
      SetLastError(ERROR_GEN_FAILURE);
      if WinUsb_TransferPipe(GetThreadHandleForDevice(DeviceIndex), PipeID, pData, DataSize, BytesTransferred, nil) then
        Result := ERROR_SUCCESS
      else
        Result := GetMappedFailure(DeviceIndex)
      ;
    end;
    else begin
      Result := ERROR_NOT_SUPPORTED;
    end;
  end;
end;

function AWU_GenericBulkIn(DeviceIndex: LongWord; PipeID: LongWord; pData: Pointer; DataSize: LongWord; var BytesRead: LongWord): LongWord; cdecl;
begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    PipeID := PipeID or $80;
    Result := _GenericBulk(DeviceIndex, PipeID, pData, DataSize, BytesRead);
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function AWU_GenericBulkOut(DeviceIndex: LongWord; PipeID: LongWord; pData: Pointer; DataSize: LongWord; var BytesWritten: LongWord): LongWord; cdecl;
begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    PipeID := PipeID and not $80;
    Result := _GenericBulk(DeviceIndex, PipeID, pData, DataSize, BytesWritten);
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;



function GetDevices: LongWord; cdecl;
var
  I: Integer;

begin
  LoadDriverLinks;

  Result := 0;
  for I := 0 to High(Dev) do
    if EnsureOpen(I) = ERROR_SUCCESS then
      Result := Result or (1 shl I)
  ;
end;

function QueryDeviceInfo(DeviceIndex: LongWord; pPID: PLongWord; pNameSize: PLongWord; pName: PAnsiChar; pDIOBytes, pCounters: PLongWord): LongWord; cdecl;
var
  Content: AnsiString;
  wContent: WideString;
  DeviceInfo: USB_DEV_DSC;
  L, L2: LongWord;

begin
  try
    Result := Validate(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    if not Dev[DeviceIndex].bGotHandle then LoadDriverLinks;

    Result := EnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    if pPID      <> nil then pPID     ^ := Dev[DeviceIndex].PID     ;
    if pDIOBytes <> nil then pDIOBytes^ := Dev[DeviceIndex].DIOBytes;
    if pCounters <> nil then pCounters^ := Dev[DeviceIndex].Counters;
    if pNameSize <> nil then begin
      if not Dev[DeviceIndex].bGetName then begin //Old ASM firmwares do not support get-string
        pNameSize^ := 0;
      end
      else begin
        L := SizeOf(DeviceInfo);
        Result := GenericVendorRead(DeviceIndex, $06, $0100, 0, L, @DeviceInfo); //Cypress get-descriptor
        if Result <> ERROR_SUCCESS then Exit;

        if L < SizeOf(DeviceInfo) then begin
          Result := ERROR_HANDLE_EOF;
          Exit;
        end;

        if DeviceInfo.iProduct = 0 then
          DeviceInfo.iProduct := 2
        ;

        SetString(wContent, nil, pNameSize^ + 1);
        L := Length(wContent) * SizeOf(wContent[1]);
        Result := GenericVendorRead(DeviceIndex, $06, $0300 or DeviceInfo.iProduct, 0, L, PWChar(wContent)); //Cypress get-string
        if Result <> ERROR_SUCCESS then Exit;

        L2 := Byte(wContent[1]) div 2;
        if L2 <> 0 then begin
          Dec(L2);
          if pName <> nil then begin
            L := Min(pNameSize^, L2+1);
            wContent := Copy(wContent, 2, L2) + #0;
            Content := AnsiString(wContent);
            Move(Content[1], pName^, L);
          end;
        end;
        Result := ERROR_SUCCESS;
        pNameSize^ := L2;
      end;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function ResolveDeviceIndex(DeviceIndex: LongWord): LongWord; cdecl;
begin
  try
    Result := Validate(DeviceIndex);
    SetLastError(Result);
    if Result = ERROR_SUCCESS then begin
      Result := DeviceIndex;
    end
    else begin
      Result := diNone;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function ClearDevices: LongWord; cdecl;
var
  I: Integer;
  wContent: WideString;
  L: LongWord;
  ErrorCode: LongWord;

begin
  for I := High(Dev) downto 0 do begin
    if Dev[I].bGotHandle then begin
      if not Dev[I].bGetName then begin
        //Old ASM firmwares do not support get-string
      end
      else begin
        ErrorCode := EnsureOpen(I);
        if ErrorCode = ERROR_SUCCESS then begin
          SetString(wContent, nil, 257);
          L := Length(wContent) * SizeOf(wContent[1]);
          ErrorCode := GenericVendorRead(I, $06, $0302, 0, L, PWChar(wContent));

          if ErrorCode <> ERROR_SUCCESS then
            GetMappedFailure(I)
          ;
        end;
      end;
    end
    else begin
      Dev[I].bDeviceWasHere := False;
    end;
  end;
  Result := ERROR_SUCCESS;
end;

function GetDeviceBySerialNumber(const pSerialNumber: Int64): LongWord; cdecl;
var
  I: Integer;
  ThisSerialNumber: Int64;
  Status: LongWord;

begin
  for I := 0 to High(Dev) do begin
    Status := GetDeviceSerialNumber(I, ThisSerialNumber);
    if Status <> ERROR_SUCCESS then Continue;
    if ThisSerialNumber <> pSerialNumber then Continue;

    Result := I;
    Exit;
  end;

  Result := diNone;
end;

function GetDeviceByEEPROMByte(Data: Byte): LongWord; cdecl;
var
  ThisData: Byte;
  Status, ThisDataSize, MyLastError: LongWord;
  I: Integer;

begin
  try
    Result := diNone;
    MyLastError := ERROR_FILE_NOT_FOUND;

    for I := 0 to High(Dev) do begin
      ThisDataSize := 1;
      Status := CustomEEPROMRead(I, 0, ThisDataSize, @ThisData);
      if Status <> ERROR_SUCCESS then Continue;
      if ThisDataSize <> 1 then Continue;
      if ThisData <> Data then Continue;

      if Result = diNone then begin
        Result := I;
        MyLastError := ERROR_SUCCESS;
      end
      else begin
        MyLastError := ERROR_DUP_NAME;
      end;
    end;
    SetLastError(MyLastError);
  except
    Result := diNone;
    SetLastError(ERROR_INTERNAL_ERROR);
  end;
end;

function GetDeviceByEEPROMData(StartAddress, DataSize: LongWord; pData: PByte): LongWord; cdecl;
var
  ipData: PByte;
  ThisData: array of Byte;
  Status, ThisDataSize, MyLastError: LongWord;
  I, J: Integer;
  bMatch: Boolean;

begin
  try
    Result := diNone;
    MyLastError := ERROR_FILE_NOT_FOUND;
